crates/rulesteward-fapolicyd/tests/snapshots/version-target__device-subject-side__rhel10.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E06] sev=Error line=1 col=1 span=0..36 :: subject-side attribute `device=` (object-only) is not valid on the selected --target rhel10 (fapolicyd 1.4.5)
